# POS-UI

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.github/workflows/: deploy.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: index.ts
src/components/layout/: AppLayout.tsx  Sidebar.tsx
src/components/ui/: Badge.tsx  BarcodeInput.tsx  Button.tsx  Card.tsx  EmptyState.tsx  ErrorBoundary.tsx  ImageCropModal.tsx  Input.tsx  Toast.tsx
src/components/ventas/: ComprobanteSelector.tsx
src/context/: AuthContext.tsx  ComercioContext.tsx  RolesContext.tsx  ToastContext.tsx
src/lib/: axios.ts
src/pages/: LicenciaBlockPage.tsx  ProximamentePage.tsx
src/pages/auth/: LoginPage.tsx  RecuperarPage.tsx
src/pages/caja/: CajaPage.tsx
src/pages/clientes/: ClienteModal.tsx  ClientesPage.tsx
src/pages/configuracion/: ComercioPage.tsx  ComprobantesPage.tsx  PermisosPage.tsx  RolesPage.tsx  ServidorPage.tsx
src/pages/creditos/: CreditosPage.tsx
src/pages/dashboard/: DashboardPage.tsx
src/pages/empleados/: EmpleadosPage.tsx
src/pages/licencias/: LicenciasAdminPage.tsx
src/pages/perfil/: PerfilPage.tsx
src/pages/productos/: CategoriasModal.tsx  CategoriasPage.tsx  ProductoModal.tsx  ProductosPage.tsx  StockBajoPage.tsx
src/pages/reportes/: ReportesPage.tsx
src/pages/usuarios/: UsuariosPage.tsx
src/pages/ventas/: CotizacionModal.tsx  VentasPage.tsx  (+2 more)
src/types/: index.ts
