[package]
name = "pos-ui"
version = "1.0.0"
description = "POS Sistema — Desktop App"
authors = ["Domercd"]
edition = "2021"

[lib]
name = "pos_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pos-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
